tests/phase_00_lexer_errors/invalid/06_invalid_escape_sequence.hulk
// Si el lexer es estricto, debe reportar \q como escape invalido.
// Si hoy no lo hace, este test documenta una mejora pendiente.
"hola\q";
